ADD: 超级管理相关接口优化
