# docs/swagger.json
@@ -1695,7 +1695,7 @@
         },
         "/system/admin/password": {
             "post": {
-                "description": "搜索用户",
+                "description": "修改用户密码",
                 "consumes": [
                     "application/json"
                 ],
@@ -1733,12 +1733,6 @@
                     "200": {
                         "description": "修改用户密码成功",
                         "schema": {
-                            "$ref": "#/definitions/model.HttpResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "修改用户密码失败",
-                        "schema": {
                             "allOf": [
                                 {
                                     "$ref": "#/definitions/model.HttpResponse"
@@ -1747,61 +1741,15 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "string"
+                                            "type": "object"
                                         }
                                     }
                                 }
                             ]
                         }
-                    }
-                }
-            }
-        },
-        "/system/admin/user": {
-            "delete": {
-                "description": "删除用户",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "超级用户操作 /system/admin"
-                ],
-                "summary": "删除用户",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "访问token",
-                        "name": "Authorization",
-                        "in": "header"
-                    },
-                    {
-                        "type": "string",
-                        "description": "访问token",
-                        "name": "access_token",
-                        "in": "query"
-                    },
-                    {
-                        "description": "用户名",
-                        "name": "SysUsername",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.SysUsername"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "删除用户成功",
-                        "schema": {
-                            "$ref": "#/definitions/model.HttpResponse"
-                        }
                     },
                     "500": {
-                        "description": "删除用户失败",
+                        "description": "修改用户密码失败",
                         "schema": {
                             "allOf": [
                                 {
@@ -3266,15 +3214,6 @@
                 },
                 "user": {
                     "$ref": "#/definitions/user.SysUser"
-                }
-            }
-        },
-        "user.SysUsername": {
-            "type": "object",
-            "properties": {
-                "username": {
-                    "type": "string",
-                    "example": "admin"
                 }
             }
         },
